# advent-of-code

./: aoc.rb  package-lock.json  package.json  runner
2017/: advent of code 2017.rb  day_19.rb  day_20.rb  day_21.rb  day_22.rb  day_23.c  day_23.rb  day_24.rb  day_25.rb  day_3.rb
2018/: aoc.py  day_10.rb  day_11.rb  day_12.rb  day_13.rb  day_14.rb  day_15.rb  day_16.rb  day_16.txt  day_17.rb  day_17.txt  day_18.rb  day_18.txt  day_19.txt  day_19_input.txt  day_20.rb  day_20.txt  day_21.txt  day_21_input.txt  day_22.txt  day_23.rb  day_23.txt  day_24.rb  day_25.rb  day_4.rb  day_5.rb  day_6.rb  day_7.rb  day_8.rb  day_9.rb  day_9.rb.rb
2020/: day_1.rb  day_10.md  day_10.rb  day_11.md  day_11.rb  day_12.md  day_12.rb  day_13.md  day_13.rb  day_14.rb  day_15.rb  day_16.rb  day_17.rb  day_18.rb  day_19.rb  day_2.rb  day_20.rb  day_21.rb  day_22.rb  day_23.rb  day_24.rb  day_25.rb  day_3.rb  day_4.rb  day_5.rb  day_6.rb  day_7.rb  day_8.rb  day_9.rb
2021/: answers.yaml  day_1.rb  day_10.rb  day_11.rb  day_12.rb  day_13.rb  day_14.rb  day_15.rb  day_16.rb  day_17.rb  day_18.rb  day_19.rb  day_2.rb  day_20.rb  day_21.rb  day_22.rb  day_23.rb  day_24  day_24.c  day_24.rb  day_25.rb  (+7 more)
2024/: Cargo.toml
2024/src/: grid.rs  main.rs
2024/src/day_1/: mod.rs
2024/src/day_10/: mod.rs
2024/src/day_11/: mod.rs
2024/src/day_12/: mod.rs
2024/src/day_13/: mod.rs
2024/src/day_2/: mod.rs
2024/src/day_3/: mod.rs
2024/src/day_4/: mod.rs
2024/src/day_5/: mod.rs
2024/src/day_6/: mod.rs
2024/src/day_7/: mod.rs
2024/src/day_8/: mod.rs
2024/src/day_9/: mod.rs
