[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "^4"
clap_derive = "^4"
indicatif = "0.17.9"
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
scopeguard = "1.2.0"
topological-sort = "0.2.2"
tracing = "0.1.41"
tracing-indicatif = "0.3.8"
tracing-subscriber = "0.3.19"
